versioned_docs/version-2.20/reference/targets/terraform_module.mdx
---
title: terraform_module
description: |
  A single Terraform module corresponding to a directory.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A single Terraform module corresponding to a directory.

There must only be one `terraform_module` in a directory.

Use `terraform_modules` to generate `terraform_module` targets for less boilerplate.

Backend: <span className="color--primary">`pants.backend.experimental.terraform`</span>

---

<span className={styles.options}>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `pants dependencies` or `pants peek` on this target to get the final result.

See https://www.pantsbuild.org/2.20/docs/using-pants/key-concepts/targets-and-build-files for more about how addresses are formed, including for generated targets. You can also run `pants list ::` to find all addresses in your project, or `pants list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `skip_terraform_validate`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.terraform"
>

If true, don&#x27;t run `terraform validate` on this target&#x27;s code. If this target is a module, `terraform validate might still be run on a `terraform_deployment that references this module.

</Field>

## `skip_tfsec`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.terraform.lint.tfsec"
>

If true, don&#x27;t run tfsec on this target&#x27;s Terraform files.

</Field>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('*.tf',)`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.tf', 'new_*.tf', '!old_ignore.tf']`

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

</span>
